crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__inheritance__constructor.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/inheritance/constructor.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class A (global @1) ∅
      (method init [(local this @0) (local param @1)] []
         (block
            (expr (= (setattr (local this @0) field) (local param @1)))))
      (method test [(local this @0)] []
         (block
            (print (attr (local this @0) field)))))
   (class B (global @2) (global A @1))
   (var b (global @3) (call +3 (global B @2) "value"))
   (expr (call +4 (attr (global b @3) test))))

----- stderr -----
