crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__inheritance__inherit_methods.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/inheritance/inherit_methods.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @1) ∅
      (method methodOnFoo [(local this @0)] []
         (block
            (print "foo")))
      (method override [(local this @0)] []
         (block
            (print "foo"))))
   (class Bar (global @2) (global Foo @1)
      (method methodOnBar [(local this @0)] [None]
         (block
            (print "bar")))
      (method override [(local this @0)] [None]
         (block
            (print "bar"))))
   (var bar (global @3) (call +3 (global Bar @2)))
   (expr (call +4 (attr (global bar @3) methodOnFoo)))
   (expr (call +4 (attr (global bar @3) methodOnBar)))
   (expr (call +4 (attr (global bar @3) override))))

----- stderr -----
